# hoa-utils-web-app

./: .gitignore  Dockerfile  LICENSE  README.md  heroku.yml  package.json
.github/workflows/: test.yml
client/: .env.development  .env.production  .prettierignore  Dockerfile  package.json
client/public/: index.html  manifest.json
client/src/: App.css  App.js  App.test.js  content.md  example.hoa  setupTests.js
server/: Dockerfile  Pipfile  pytest.ini  setup.cfg  setup.py  tox.ini  wsgi.py
server/hoa_utils_api/: __init__.py  app.py
server/tests/: test_server.py
